--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Para Mi Osita</title>
+  <meta charset="UTF-8">
+  <title>Carta Amor</title>
   <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-<div class="bgoverlay">
-  <div class="container">
-    <span class="ico">
-      <span class="ico2"></span>
-      <span class="title">Click Me</span>
-    </span>
-    <div class="endtext">
-      <span class="close" title="Close"><i class="fa fa-times"></i></span>  
-      <h1>TE AMO AMOR MIO</h1>
-      <h2>~</h2>
-      <h3>De tú Osito.</h3>
+<div class="envlope-wrapper">
+    <div id="envelope" class="close">
+        <div class="front flap"></div>
+        <div class="front pocket"></div>
+        <div class="letter">
+            <div class="words line1"></div>
+            <div class="words line2"><b>TE AMO OSITA <3</b></div>
+            <div class="words line3"></div>
+            <div class="words line4"></div>
+        </div>
+        <div class="hearts">
+            <div class="heart a1"></div>
+            <div class="heart a2"></div>
+            <div class="heart a3"></div>
+        </div>
     </div>
-  </div>
 </div>
-<script src="script.js"></script>
+<div class="reset">
+    <button id="open">Abrir</button>
+    <button id="reset">Cerrar</button>
+</div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="script.js"></script>
+
 </body>
 </html>
